Kubernetes/Wordpress/Helm/Wordpress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unserneuesheim-http
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web  # Port 80 entry point
  routes:
    - match: Host(`unserneuesheim.de`)
      kind: Rule
      services:
        - name: unserneuesheim-service-http
          port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: unserneuesheim-service-http
  namespace: traefik
spec:
  type: ExternalName
  externalName: 192.168.0.201  # Target backend IP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: unserneuesheim-https
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure  # Port 443 entry point
  routes:
    - match: HostSNI(`unserneuesheim.de`)  # Match HTTPS traffic with SNI
      services:
        - name: unserneuesheim-service-https
          port: 443
  tls:
    passthrough: true  # Pass TLS traffic directly to the backend
---
apiVersion: v1
kind: Service
metadata:
  name: unserneuesheim-service-https
  namespace: traefik
spec:
  type: ExternalName
  externalName: 192.168.0.201  # Target backend IP
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
      name: https
